Update 0.20(Actualisacion a fromulario de datos)

--- a/crud/crud.csproj
+++ b/crud/crud.csproj
@@ -63,6 +63,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="datos_generales.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="datos_generales.Designer.cs">
+      <DependentUpon>datos_generales.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -91,6 +97,9 @@
     <Compile Include="operaciones.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="datos_generales.resx">
+      <DependentUpon>datos_generales.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
